--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,19 @@
     if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
   </script>
-
+  
+  {% if page.layout == "timeline" %}
+  {% capture today %}{{site.time | date: "%F"}}{% endcapture %}
+  {% for post in site.categories.class %}
+    {% capture datestamp %}{{post.date | date: "%F"}}{% endcapture %}
+    {% if %}
+  {% endfor %}
+  <meta http-equiv="refresh" content="1; url={{  }}">
+        <script type="text/javascript">
+            window.location.href = "http://example.com"
+        </script>
+  {% endif %}
+  
   <title>{% if page.title %}{{ site.title }}&nbsp;|&nbsp;{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
