--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,15 +12,23 @@
   </script>
   
   {% if page.layout == "timeline" %}
-  {% capture today %}{{site.time | date: "%F"}}{% endcapture %}
-  {% for post in site.categories.class %}
-    {% capture datestamp %}{{post.date | date: "%F"}}{% endcapture %}
-    {% if %}
-  {% endfor %}
-  <meta http-equiv="refresh" content="1; url={{  }}">
-        <script type="text/javascript">
-            window.location.href = "http://example.com"
-        </script>
+      {% comment %}{% capture today %}{{site.time | date: "%F"}}{% endcapture %}{% endcomment %}
+      {% capture today %}{{ "2017-07-25 00:00" | date: "%F"}}{% endcapture %}
+      {% for post in site.categories.class reversed %}
+          {% capture datestamp %}{{post.date | date: "%F"}}{% endcapture %}
+          {% if datestamp == today %}
+              {% capture hashurl %}{{ post.id | replace: "/", "-" | replace: "-class", "#event" }}{% endcapture %} 
+          {% else %}
+            {% continue %}
+          {% endif %}
+      {% endfor %}
+  
+  <script type="text/javascript"> 
+  // Redirect to "#about" if there is no hash in the URL. 
+    if (window.location.hash == '') { 
+      window.location.href = '{{ hashurl | prepend: site.baseurl | prepend: site.url }}'; 
+    } 
+  </script>
   {% endif %}
   
   <title>{% if page.title %}{{ site.title }}&nbsp;|&nbsp;{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
