--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -12,6 +12,8 @@
     <article>
       {{ content }}
     </article> 
+    {% include print-footer.html %}
+    {% include footer.html %}
     </div>
 <!-- JavaScript -->
  
