fixed timeline redirect

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,27 @@
         window.location.protocol = "https";
   </script>
   
+    {% if page.layout == "timeline" %}
+      {% capture today %}{{site.time | date: "%F"}}{% endcapture %}
+      {% for post in site.categories.class reversed %}
+          {% capture datestamp %}{{post.date | date: "%F"}}{% endcapture %}
+          {% if datestamp == today %}
+            {% capture hashurl %}{{ post.id | replace: "/", "-" | prepend: "#event" }}{% endcapture %} 
+          {% else %}
+            {% continue %}
+          {% endif %}
+      {% endfor %}
+  {% endif %}
+  {% if hashurl == nil %}
+    {% capture hashurl %}{{ site.title | replace: " ", "-" | prepend: "#event-" | downcase }}{% endcapture %}
+  {% endif %}
+  <script type="text/javascript"> 
+  // Redirect to hashurl for schedule timeline slide if there is no hash in the URL. 
+    if (window.location.hash == '') { 
+      window.location.href = '{{ hashurl }}'; 
+    } 
+  </script>
+  
   <title>{% if page.title %}{{ site.title }}&nbsp;|&nbsp;{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
