--- a/_includes/assignments.html
+++ b/_includes/assignments.html
@@ -1,4 +1,4 @@
-{% for post in site.categories.assignment reversed %}
+{% for post in site.categories.assignments reversed %}
 
 <a href="{{ post.url | prepend: site.baseurl }}" ><h1>{{ post.title }}</h1></a>
     
