fix timeline header fonts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -78,7 +78,7 @@
     <!-- CSS-->
     <link rel="stylesheet" href="{{ '/css/timeline.css' | prepend: baseurl }}">
     <!--FONT-->
-    <link rel="stylesheet" href="{{ '/css/fonts/font.default.css' | prepend: baseurl }}">
+    <link rel="stylesheet" href="{{ '/css/fonts/font.tufte.css' | prepend: baseurl }}">
 
     <!-- HTML5 shim, for IE6-8 support of HTML elements-->
     <!--if lt IE 9
